[package]
name = "eightfish-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eightfish_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
borsh = "0.10.3"
solana-security-txt = "1.1.1"
spl-account-compression = { version = "0.2.0", features = ["no-entrypoint", "cpi"] }
thiserror = "1.0.48"
